fixed img cropping

--- a/src/app/pages/one-add/one-add.component.scss
+++ b/src/app/pages/one-add/one-add.component.scss
@@ -15,6 +15,7 @@
     width: 100%;
     height: 100%;
     img {
+      object-fit: cover;
       width: 250px;
       height: 100%;
     }
